--- a/_data/textures-and-patterns.yml
+++ b/_data/textures-and-patterns.yml
@@ -12,7 +12,7 @@
   resource-type: Free
   download-links:
    - link: <a href="https://www.deviantart.com/altback/art/Sketchbook-Jacket-Texture-591209591" rel="nofollow">Download from DeviantArt</a>
-  texture_image: assets/images/textures-and-patterns/sketchbook_jacket_texture.png
+  texture_image: assets/images/textures-and-patterns/sketchbook_jacket_texture.jpg
   texture_image_alttext: Sketchbook Jacket Texture by altback
   texture_link: https://www.deviantart.com/altback/art/Sketchbook-Jacket-Texture-591209591
 
