--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ baseurl:
 # baseurl: /jekyll-vfolio
 
 # Google Analytics
-google_analytics: UA-146584013-1
+google_analytics:
 
 
 # Build settings
