--- a/_data/krita-brushes.yml
+++ b/_data/krita-brushes.yml
@@ -13,7 +13,7 @@
   resource-type: Free
   app-tested: "Krita-4.2.6, krita-4.2.8, krita-4.2.9"
   download-links:
-   - link: <a href="https://www.deviantart.com/download/858594150/de76nhi-5c698a69-b97d-4fd0-bf9a-aee75d4dcf80.zip?" rel="nofollow">Download from DeviantArt</a>
+   - link: <a href="https://www.deviantart.com/altback/art/Square-Shape-Brushes-for-KRITA-by-Altback-858594150" rel="nofollow">Download from DeviantArt</a>
    - link: <a href="https://gum.co/squareShapeBrushes-KRITA" rel="nofollow">Download from Gumroad</a>
   videotype: image
   videoID: NIL
